feat: add getZipShapefile API
